--- a/editcountitis/src/main/AndroidManifest.xml
+++ b/editcountitis/src/main/AndroidManifest.xml
@@ -18,6 +18,9 @@
         <activity
             android:name="in.yuvi.editcountitis.SettingsActivity"
             android:label="@string/app_name" >
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_CONFIGURE"/>
+            </intent-filter>
         </activity>
 
         <receiver
